# btx

./: main.py  makefile  process.py  pyproject.toml
modules/: analyzer.py  source.py
modules/analyzer/: analyzer.py
modules/analyzer/stochastic/: __init__.py  stochastic.py
modules/backtest/: __init__.py  backtest.py  position.py  test_position.py  trader.py
modules/data/: __init__.py  analyzer.py  enum.py  io.py  paths.py
modules/utils/: __init__.py  calc.py  exchange_rate.py
